--- a/rpi/README
+++ b/rpi/README
@@ -101,6 +101,13 @@ http://www.ultimarc.com/jpac.html
 
 * TBD *
 
+Legal Amiga Emulation
+
+http://www.amigaforever.com
+http://ale.emuunlim.com/guides/get-kick-rom.shtml
+http://www.pcguru.plus.com/linux_uae_faq.html
+http://classicwb.abime.net/classicweb/uae.htm
+
 Advanced users
 ==============
 
